hal/include/HAL/Digital.h

  void* initializeDigitalPort(void* port_pointer, int32_t *status);
  bool checkDigitalModule(uint8_t module);