hal/include/HAL/Analog.hpp

enum AnalogTriggerType
{
	kInWindow = 0,
	kState = 1,
	kRisingPulse = 2,
	kFallingPulse = 3
};
	void setAccumulatorDeadband(void* analog_port_pointer, int32_t deadband, int32_t *status);
	int64_t getAccumulatorValue(void* analog_port_pointer, int32_t *status);
	uint32_t getAccumulatorCount(void* analog_port_pointer, int32_t *status);
	void getAccumulatorOutput(void* analog_port_pointer, int64_t *value, uint32_t *count,
			int32_t *status);
	void* initializeAnalogTrigger(void* port_pointer, uint32_t *index, int32_t *status);
	void cleanAnalogTrigger(void* analog_trigger_pointer, int32_t *status);
	void setAnalogTriggerLimitsRaw(void* analog_trigger_pointer, int32_t lower, int32_t upper,
			int32_t *status);
	void setAnalogTriggerLimitsVoltage(void* analog_trigger_pointer, double lower, double upper,
			int32_t *status);
	void setAnalogTriggerAveraged(void* analog_trigger_pointer, bool useAveragedValue,
			int32_t *status);
	void setAnalogTriggerFiltered(void* analog_trigger_pointer, bool useFilteredValue,
			int32_t *status);
	bool getAnalogTriggerInWindow(void* analog_trigger_pointer, int32_t *status);
	bool getAnalogTriggerTriggerState(void* analog_trigger_pointer, int32_t *status);
	bool getAnalogTriggerOutput(void* analog_trigger_pointer, AnalogTriggerType type,
			int32_t *status);