wpilibj/wpilibJava/src/main/java/edu/wpi/first/wpilibj/hal/HALLibrary.java

	/**
	 * Original signature : <code>void setAccumulatorDeadband(void*, int32_t, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Analog.h:31</i><br>
	 * @deprecated use the safer methods {@link #setAccumulatorDeadband(com.sun.jna.Pointer, int, java.nio.IntBuffer)} and {@link #setAccumulatorDeadband(com.sun.jna.Pointer, int, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native void setAccumulatorDeadband(Pointer analog_port_pointer, int deadband, IntByReference status);
	/**
	 * Original signature : <code>void setAccumulatorDeadband(void*, int32_t, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Analog.h:31</i>
	 */
	public static native void setAccumulatorDeadband(Pointer analog_port_pointer, int deadband, IntBuffer status);
	/**
	 * Original signature : <code>int64_t getAccumulatorValue(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Analog.h:32</i><br>
	 * @deprecated use the safer methods {@link #getAccumulatorValue(com.sun.jna.Pointer, java.nio.IntBuffer)} and {@link #getAccumulatorValue(com.sun.jna.Pointer, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native long getAccumulatorValue(Pointer analog_port_pointer, IntByReference status);
	/**
	 * Original signature : <code>int64_t getAccumulatorValue(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Analog.h:32</i>
	 */
	public static native long getAccumulatorValue(Pointer analog_port_pointer, IntBuffer status);
	/**
	 * Original signature : <code>uint32_t getAccumulatorCount(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Analog.h:33</i><br>
	 * @deprecated use the safer methods {@link #getAccumulatorCount(com.sun.jna.Pointer, java.nio.IntBuffer)} and {@link #getAccumulatorCount(com.sun.jna.Pointer, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native int getAccumulatorCount(Pointer analog_port_pointer, IntByReference status);
	/**
	 * Original signature : <code>uint32_t getAccumulatorCount(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Analog.h:33</i>
	 */
	public static native int getAccumulatorCount(Pointer analog_port_pointer, IntBuffer status);
	/**
	 * Original signature : <code>void getAccumulatorOutput(void*, int64_t*, uint32_t*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Analog.h:34</i><br>
	 * @deprecated use the safer methods {@link #getAccumulatorOutput(com.sun.jna.Pointer, java.nio.LongBuffer, java.nio.IntBuffer, java.nio.IntBuffer)} and {@link #getAccumulatorOutput(com.sun.jna.Pointer, com.sun.jna.ptr.LongByReference, com.sun.jna.ptr.IntByReference, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native void getAccumulatorOutput(Pointer analog_port_pointer, LongByReference value, IntByReference count, IntByReference status);
	/**
	 * Original signature : <code>void getAccumulatorOutput(void*, int64_t*, uint32_t*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Analog.h:34</i>
	 */
	public static native void getAccumulatorOutput(Pointer analog_port_pointer, LongBuffer value, IntBuffer count, IntBuffer status);
	/**
	 * Original signature : <code>void* initializeAnalogTrigger(void*, uint32_t*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Analog.h:37</i><br>
	 * @deprecated use the safer methods {@link #initializeAnalogTrigger(com.sun.jna.Pointer, java.nio.IntBuffer, java.nio.IntBuffer)} and {@link #initializeAnalogTrigger(com.sun.jna.Pointer, com.sun.jna.ptr.IntByReference, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native Pointer initializeAnalogTrigger(Pointer port_pointer, IntByReference index, IntByReference status);
	/**
	 * Original signature : <code>void* initializeAnalogTrigger(void*, uint32_t*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Analog.h:37</i>
	 */
	public static native Pointer initializeAnalogTrigger(Pointer port_pointer, IntBuffer index, IntBuffer status);
	/**
	 * Original signature : <code>void cleanAnalogTrigger(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Analog.h:38</i><br>
	 * @deprecated use the safer methods {@link #cleanAnalogTrigger(com.sun.jna.Pointer, java.nio.IntBuffer)} and {@link #cleanAnalogTrigger(com.sun.jna.Pointer, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native void cleanAnalogTrigger(Pointer analog_trigger_pointer, IntByReference status);
	/**
	 * Original signature : <code>void cleanAnalogTrigger(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Analog.h:38</i>
	 */
	public static native void cleanAnalogTrigger(Pointer analog_trigger_pointer, IntBuffer status);
	/**
	 * Original signature : <code>void setAnalogTriggerLimitsRaw(void*, int32_t, int32_t, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Analog.h:39</i><br>
	 * @deprecated use the safer methods {@link #setAnalogTriggerLimitsRaw(com.sun.jna.Pointer, int, int, java.nio.IntBuffer)} and {@link #setAnalogTriggerLimitsRaw(com.sun.jna.Pointer, int, int, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native void setAnalogTriggerLimitsRaw(Pointer analog_trigger_pointer, int lower, int upper, IntByReference status);
	/**
	 * Original signature : <code>void setAnalogTriggerLimitsRaw(void*, int32_t, int32_t, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Analog.h:39</i>
	 */
	public static native void setAnalogTriggerLimitsRaw(Pointer analog_trigger_pointer, int lower, int upper, IntBuffer status);
	/**
	 * Original signature : <code>void setAnalogTriggerLimitsVoltage(void*, float, float, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Analog.h:40</i><br>
	 * @deprecated use the safer methods {@link #setAnalogTriggerLimitsVoltage(com.sun.jna.Pointer, float, float, java.nio.IntBuffer)} and {@link #setAnalogTriggerLimitsVoltage(com.sun.jna.Pointer, float, float, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native void setAnalogTriggerLimitsVoltage(Pointer analog_trigger_pointer, double lower, double upper, IntByReference status);
	/**
	 * Original signature : <code>void setAnalogTriggerLimitsVoltage(void*, float, float, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Analog.h:40</i>
	 */
	public static native void setAnalogTriggerLimitsVoltage(Pointer analog_trigger_pointer, double lower, double upper, IntBuffer status);
	/**
	 * Original signature : <code>void setAnalogTriggerAveraged(void*, bool, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Analog.h:41</i><br>
	 * @deprecated use the safer methods {@link #setAnalogTriggerAveraged(com.sun.jna.Pointer, byte, java.nio.IntBuffer)} and {@link #setAnalogTriggerAveraged(com.sun.jna.Pointer, byte, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native void setAnalogTriggerAveraged(Pointer analog_trigger_pointer, byte useAveragedValue, IntByReference status);
	/**
	 * Original signature : <code>void setAnalogTriggerAveraged(void*, bool, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Analog.h:41</i>
	 */
	public static native void setAnalogTriggerAveraged(Pointer analog_trigger_pointer, byte useAveragedValue, IntBuffer status);
	/**
	 * Original signature : <code>void setAnalogTriggerFiltered(void*, bool, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Analog.h:42</i><br>
	 * @deprecated use the safer methods {@link #setAnalogTriggerFiltered(com.sun.jna.Pointer, byte, java.nio.IntBuffer)} and {@link #setAnalogTriggerFiltered(com.sun.jna.Pointer, byte, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native void setAnalogTriggerFiltered(Pointer analog_trigger_pointer, byte useFilteredValue, IntByReference status);
	/**
	 * Original signature : <code>void setAnalogTriggerFiltered(void*, bool, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Analog.h:42</i>
	 */
	public static native void setAnalogTriggerFiltered(Pointer analog_trigger_pointer, byte useFilteredValue, IntBuffer status);
	/**
	 * Original signature : <code>bool getAnalogTriggerInWindow(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Analog.h:43</i><br>
	 * @deprecated use the safer methods {@link #getAnalogTriggerInWindow(com.sun.jna.Pointer, java.nio.IntBuffer)} and {@link #getAnalogTriggerInWindow(com.sun.jna.Pointer, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native byte getAnalogTriggerInWindow(Pointer analog_trigger_pointer, IntByReference status);
	/**
	 * Original signature : <code>bool getAnalogTriggerInWindow(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Analog.h:43</i>
	 */
	public static native byte getAnalogTriggerInWindow(Pointer analog_trigger_pointer, IntBuffer status);
	/**
	 * Original signature : <code>bool getAnalogTriggerTriggerState(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Analog.h:44</i><br>
	 * @deprecated use the safer methods {@link #getAnalogTriggerTriggerState(com.sun.jna.Pointer, java.nio.IntBuffer)} and {@link #getAnalogTriggerTriggerState(com.sun.jna.Pointer, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native byte getAnalogTriggerTriggerState(Pointer analog_trigger_pointer, IntByReference status);
	/**
	 * Original signature : <code>bool getAnalogTriggerTriggerState(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Analog.h:44</i>
	 */
	public static native byte getAnalogTriggerTriggerState(Pointer analog_trigger_pointer, IntBuffer status);
	/**
	 * Original signature : <code>bool getAnalogTriggerOutput(void*, AnalogTriggerType, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Analog.h:45</i><br>
	 * @deprecated use the safer methods {@link #getAnalogTriggerOutput(com.sun.jna.Pointer, int, java.nio.IntBuffer)} and {@link #getAnalogTriggerOutput(com.sun.jna.Pointer, int, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native byte getAnalogTriggerOutput(Pointer analog_trigger_pointer, int type, IntByReference status);
	/**
	 * Original signature : <code>bool getAnalogTriggerOutput(void*, AnalogTriggerType, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Analog.h:45</i>
	 */
	public static native byte getAnalogTriggerOutput(Pointer analog_trigger_pointer, int type, IntBuffer status);
	/**
	 * Original signature : <code>void* initializeDigitalPort(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:6</i><br>
	 * @deprecated use the safer methods {@link #initializeDigitalPort(com.sun.jna.Pointer, java.nio.IntBuffer)} and {@link #initializeDigitalPort(com.sun.jna.Pointer, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native Pointer initializeDigitalPort(Pointer port_pointer, IntByReference status);
	/**
	 * Original signature : <code>void* initializeDigitalPort(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:6</i>
	 */
	public static native Pointer initializeDigitalPort(Pointer port_pointer, IntBuffer status);
	/**
	 * Original signature : <code>bool checkDigitalModule(uint8_t)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:7</i>
	 */
	public static native byte checkDigitalModule(byte module);
